add_subdirectory( Command               )
add_subdirectory( CommandLineInterface  )
add_subdirectory( DateAndTime           )
add_subdirectory( Fitter                )
add_subdirectory( InputParser           )
add_subdirectory( Logger                )
add_subdirectory( Memory                )
add_subdirectory( String                )
add_subdirectory( Table                 )
add_subdirectory( Timer                 )